.conflict-side-1/_old-projects/kubernetes/sonar/external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonar-external
  namespace: sonarqube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonar.m1xxos.me`)
      kind: Rule
      services:
        - name: sonarqube-sonarqube
          namespace: sonarqube
          port: 9000
  tls:
   secretName: m1xxos-me
